--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - POSTGRES_PASSWORD=typebot
 
   typebot-builder:
-    image: baptistearno/typebot-builder:latest
+    image: .
     restart: always
     depends_on:
       - typebot-db
